[package]
name = "backlogrs"
version = "0.0.1"
authors = ["Fredrik Sommar <fsommar@kth.se>"]

[dependencies]
rustc-serialize = "0.2.0"
iron = "0.1.9"
postgres = "0.6.5"
router = "0.0.9"
error = "0.1.3"
plugin = "0.2.1"
typemap = "0.0.9"
r2d2 = "0.5.1"
r2d2_postgres = "0.7.0"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser"
rev = "480cbf7d628d97e9f43f1858e66492b242d67e25"

[dependencies.time]
version = "0.1.18"
features = ["rustc-serialize"]

