[package]
name = "backlogrs"
version = "0.0.2"
authors = ["Fredrik Sommar <fsommar@kth.se>"]

[dependencies]
rustc-serialize = "0.3"
iron = "0.1.10"
router = "0.0.9"
error = "0.1"
plugin = "0.2"
typemap = "0.0.10"
r2d2 = "0.5"
r2d2_postgres = "0.8"
chrono = "0.2.5"

[dependencies.bodyparser]
git = "https://github.com/fsommar/body-parser"

[dependencies.time]
version = "0.1.19"
features = ["rustc-serialize"]

[dependencies.postgres]
version = "0.7"
features = ["time", "unix_socket"]

# Compiler bug workaround (#22432)
[profile.dev]
debug = false
